--- a/hugo/themes/liva-hugo/layouts/partials/sidebar.html
+++ b/hugo/themes/liva-hugo/layouts/partials/sidebar.html
@@ -8,7 +8,7 @@
       class="img-fluid author-thumb-sm d-block mx-auto rounded-circle mb-4">
     {{ end }}
     <p>{{ .Summary }}</p>
-    <a href="{{ .Permalink }}" class="btn btn-outline-primary">Know More</a>
+    <!-- <a href="{{ .Permalink }}" class="btn btn-outline-primary">Know More</a> -->
     {{ end }}
   </div>
   <!-- category -->
@@ -19,7 +19,7 @@
     <ul class="list-unstyled">
       {{- range $name, $items := .Site.Taxonomies.categories }}
       <li><a
-          href="{{ `categories/` | relLangURL }}{{ $name | urlize | lower }}">{{ $name | title | humanize }}</a>
+          href="{{ `categories/` | relLangURL }}{{ $name | urlize | lower }}">{{ $name }}</a>
       </li>
       {{- end }}
     </ul>
@@ -51,6 +51,6 @@
   </div>
   <!-- advertisement -->
   <div class="widget">
-    <img src="{{`images/promotion.png` | absURL}}" alt="" class="img-fluid">
+    <!-- <img src="{{`images/promotion.png` | absURL}}" alt="" class="img-fluid"> -->
   </div>
 </div>
