--- a/hugo/themes/liva-hugo/layouts/contact/list.html
+++ b/hugo/themes/liva-hugo/layouts/contact/list.html
@@ -30,8 +30,9 @@
   </div>
 </section>
 
+<section class="section-sm pb-0"></section>
 
-<section class="section-sm pb-0">
+<!-- <section class="section-sm pb-0">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center">
@@ -56,6 +57,6 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 {{ end }}
