cleanup overall look

--- a/hugo/themes/liva-hugo/layouts/partials/footer.html
+++ b/hugo/themes/liva-hugo/layouts/partials/footer.html
@@ -24,7 +24,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-center mb-5">
-        <a href="{{ .Site.BaseURL }}"><img src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}"></a>
+        <a class="text-dark" href="{{ .Site.BaseURL }}"><span style="font-size: 35px;">{{ .Site.Title }}</span></a>
       </div>
       <div class="col-lg-3 col-sm-6 mb-5">
         <h6 class="mb-4">Contact Me</h6>
