--- a/hugo/themes/liva-hugo/layouts/partials/header.html
+++ b/hugo/themes/liva-hugo/layouts/partials/header.html
@@ -3,8 +3,8 @@
   <div class="container">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-white bg-transparent border-bottom pl-0">
-      <a class="navbar-brand mobile-view" href="{{ .Site.BaseURL }}"><img class="img-fluid"
-          src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}"></a>
+      <!-- <a class="navbar-brand mobile-view" href="{{ .Site.BaseURL }}"><img class="img-fluid" src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}"></a> -->
+      <a class="navbar-brand mobile-view text-dark" href="{{ .Site.BaseURL }}"><span style="font-size: 35px;">{{ .Site.Title }}</span></a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navigation">
         <i class="ti-menu h3"></i>
       </button>
@@ -20,8 +20,8 @@
           </ul>
         </div>
 
-        <a class="navbar-brand mx-auto desktop-view" href="{{ .Site.BaseURL }}"><img class="img-fluid"
-            src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}"></a>
+        <!-- <a class="navbar-brand mx-auto desktop-view" href="{{ .Site.BaseURL }}"><img class="img-fluid" src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}"></a> -->
+        <a class="navbar-brand mx-auto desktop-view text-dark" href="{{ .Site.BaseURL }}"><span style="font-size: 35px;">{{ .Site.Title }}</span></a>
 
         <ul class="navbar-nav">
           {{ range .Site.Menus.main }}
